# Pings-Local

./: .gitignore  CODEBASE_FEATURES_AND_FLOW.md  README.md  UPDATER_SETUP.md  V3_PLAN.md  electron.vite.config.js  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
agent-bridge/: README.md  index.js  package-lock.json  package.json  weekly.js
dispatch/: Cargo.toml  Dockerfile  README.md  apns.env.example
dispatch/src/: admin.html  go-manifest.json  go-sw.js  go.html  lib.rs  main.rs  push.rs
dispatch/tests/fixtures/: apns-chat.json  apns-ping.json
docs/: DISCOVERY-SERVER.md  DISPATCH-PLAN.md  GO-NATIVE-HANDOFF.md  HOOKS-PLAN.md  ONDEVICE-CHECKLIST.md  PRODUCT-LINE.md  PROTOCOL.md  TESTING.md  v3-mockup.html
go-native/: README.md  package-lock.json  package.json
go-native/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
go-native/src-tauri/capabilities/: default.json
go-native/src-tauri/icons/: icon.icns
go-native/src-tauri/src/: lib.rs  main.rs
go-native/tauri-plugin-go-push/: Cargo.toml  README.md  build.rs
go-native/tauri-plugin-go-push/ios/: Package.swift  README.md
go-native/tauri-plugin-go-push/ios/Sources/: GoPushPlugin.swift
go-native/tauri-plugin-go-push/permissions/: default.toml
go-native/tauri-plugin-go-push/permissions/autogenerated/: reference.md
go-native/tauri-plugin-go-push/permissions/autogenerated/commands/: request_push.toml
go-native/tauri-plugin-go-push/permissions/schemas/: schema.json
go-native/tauri-plugin-go-push/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
go-native/ui/: app.css  app.js  index.html
scripts/: generate-icons.js
src/: direct-chat.css  direct-chat.html  direct-chat.js  index.html  main.js  options.css  options.html  options.js  overlay.html  overlay.js  palette.css  palette.html  palette.js  pings-api.js  styles.css  toast.css  toast.html  toast.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: dispatch_host.rs  lib.rs  main.rs  networking.rs  overlay.rs  palette.rs  persistence.rs  store.rs  toast.rs  tray.rs
src/core/: enter.js  format.js  sound.js  tokens.css
src/main/: index.js  networking.js
src/preload/: index.js
src/renderer/: dashboard.css  dashboard.html  dashboard.js  index.html  main.js  onboarding.css  onboarding.html  onboarding.js  private-chat.css  private-chat.html  private-chat.js  style.css
v2/: .gitignore  README.md  V2_MIGRATION_PLAN.md  package-lock.json
v2/scripts/: prepare-local-update.mjs  serve-local-updates.mjs
v2/src/: direct-chat.js  index.html  main.js  overlay.css  pings-api.js  styles.css
v2/src-tauri/: Cargo.toml  tauri-update.key.pub  tauri.conf.json
v2/src-tauri/capabilities/: default.json
v2/src-tauri/src/: lib.rs  persistence.rs
