[package]
name = "pings-dispatch"
version = "0.2.0"
description = "Pings Dispatch — the team rendezvous + relay server"
edition = "2021"

# The CLI always ships with push capability; default-features = false is for
# the embedded desktop host, which links only the library.
[[bin]]
name = "pings-dispatch"
path = "src/main.rs"
required-features = ["push"]

[features]
# `push` pulls in the APNs client; the embedded desktop host builds with
# default-features = false and stays push-free.
default = ["push"]
push = ["dep:a2"]

[dependencies]
a2 = { version = "0.10", default-features = false, features = ["ring"], optional = true }
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1"
tokio-tungstenite = "0.28"
tower = { version = "0.5", features = ["util"] }
