[package]
name = "pings-v2"
version = "0.3.5"
description = "Pings v2 on Tauri"
authors = ["Pings Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pings_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
if-addrs = "0.13"
hostname = "0.4"
mdns-sd = "0.11"
socketioxide = "0.18"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
# Dispatch (team server) client. reqwest is already in the tree via the
# updater plugin and tokio-tungstenite via socketioxide, so neither adds new
# transitive weight.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
# The embedded team server ("Host on this computer" in Options) — the same
# library the headless pings-dispatch CLI is built from. No default features:
# the APNs push gateway is CLI-only, embedded hosts don't push.
pings-dispatch = { path = "../dispatch", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
objc2-web-kit = "0.3"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1", version = "2.1.0" }
